# feishu-docx

./: CHANGELOG.md  README.md  README_zh.md  makefile  pyproject.toml
.github/workflows/: python-ci.yml
feishu_docx/: __init__.py
feishu_docx/cli/: cmd_export.py  cmd_export_browser.py  cmd_write.py  main.py
feishu_docx/core/: __init__.py  exporter.py  pdf_exporter.py  writer.py
feishu_docx/core/browser_export/: __init__.py  browser_document_extractor.py  browser_markdown_exporter.py  browser_markdown_parser.py
feishu_docx/core/parsers/: document.py  sheet.py
feishu_docx/core/sdk/: base.py  docx.py  media.py  sheet.py  wiki.py
feishu_docx/schema/: __init__.py  models.py
feishu_docx/utils/: render_table.py
tests/: public_doc_e2e_case.py  test_document_parser.py  test_public_doc_e2e.py  test_sheet.py  test_wiki.py
tests/e2e_snapshots/public_doc/markdown/: blockquote.md  synced_block.md  table.md
tests/e2e_snapshots/public_doc/pdf/: blockquote.txt  callout.txt  image_image.json  synced_block.txt  table.txt  whiteboard_image.json
